--- a/.gitignore
+++ b/.gitignore
@@ -149,7 +149,7 @@ chinese_wcm_jt_pytorch/
 chinese_wcm_ft_pytorch/
 chinese_L-12_H-768_A-12/
 RoBERTa_zh_L12_PyTorch/
-acft_electra_small_pytorch/
+bert_daizhege/
 
 # pre-trained chinese word embedding
 sgns.sikuquanshu.word/
